report system in progress

--- a/Auth4/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
+++ b/Auth4/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
@@ -22,5 +22,6 @@
         <li class="nav-item"><a class="nav-link @ManageNavPages.ManageDeleteRequestNavClass(ViewContext)" id="Manage-Delete-Request" asp-page="./ManageDeleteRequest">Manage Delete Requests</a></li>
         <li class="nav-item"><a class="nav-link @ManageNavPages.ApprovalsNavClass(ViewContext)" id="Approvals" asp-page="./Approvals">Manage Creations</a></li>
         <li class="nav-item"><a class="nav-link @ManageNavPages.ManageEditRequestNavClass(ViewContext)" id="Manage-Edit-Request" asp-page="./ManageEditRequest">Manage Edit Requests</a></li>
+        <li class="nav-item"><a class="nav-link @ManageNavPages.ManageFlagsNavClass(ViewContext)" id="Manage-Flags" asp-page="./ManageFlags">Manage Flags</a></li>
     }
 </ul>
