--- a/Auth4/Views/Article/Create.cshtml
+++ b/Auth4/Views/Article/Create.cshtml
@@ -29,7 +29,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Article.desc" class="control-label"></label>
-                <textarea type="text"asp-for="Article.desc" class="form-control" ></textarea>
+                <textarea type="text" asp-for="Article.desc" class="form-control"></textarea>
                 <span asp-validation-for="Article.desc" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -52,14 +52,18 @@
                 <input asp-for="Article.ArticleContact" class="form-control" />
                 <span asp-validation-for="Article.ArticleContact" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <div>The image file</div>
-                <input asp-for="Files" type="file" accept=".jpg,.jpeg,.png" required />
+            <div>
+                <select asp-for="Article.Category" style="width:90%" name="Category" id="Category">
+                    <option value="1">Business</option>
+                    <option value="2">Entertainment</option>
+                    <option value="3">Healt</option>
+                </select>
             </div>
             <div class="form-group">
                 <div>The image file</div>
                 <input asp-for="Files" type="file" accept=".jpg,.jpeg,.png" required />
             </div>
+
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
