--- a/Auth4/Views/Article/Details.cshtml
+++ b/Auth4/Views/Article/Details.cshtml
@@ -13,7 +13,7 @@
         @*<dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Article.ArticleTitle)
         </dt>*@
-        
+
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Article.desc_mini)
         </dt>
@@ -33,6 +33,12 @@
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Article.ArticleAdress)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Article.Category)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Article.Category)
         </dd>
         @*<dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Article.ArticleLat)
