--- a/Auth4/Views/Article/Edit.cshtml
+++ b/Auth4/Views/Article/Edit.cshtml
@@ -48,6 +48,13 @@
                 <input asp-for="Article.ArticleContact" class="form-control" />
                 <span asp-validation-for="Article.ArticleContact" class="text-danger"></span>
             </div>
+            <div>
+                <select asp-for="Article.Category" style="width:90%" name="Category" id="Category">
+                    <option value="1">Business</option>
+                    <option value="2">Entertainment</option>
+                    <option value="3">Healt</option>
+                </select>
+            </div>
             <div class="form-group">
                 <div>The image file</div>
                 <input asp-for="Files" type="file" accept=".jpg,.jpeg,.png" />
