--- a/Auth4/Views/Shared/_Layout.cshtml
+++ b/Auth4/Views/Shared/_Layout.cshtml
@@ -22,6 +22,7 @@
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
                 <a class="navbar-brand" asp-area="" asp-controller="Article" asp-action="Index">BrightPath</a>
+                <form>@Html.TextBox("searching")<input asp-controller="Article" asp-action="Search" type="submit" value="Search" /></form>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -33,6 +34,17 @@
             </div>
         </nav>
     </header>
+    <br />
+    <br />
+    <br />
+    <br />
+    <nav class="navbar navbar-light bg-light">
+        <ul class="navbar-nav">
+            <li class="nav-item"><a asp-controller="Article" asp-action="CategoryIndex" asp-route-category="Business">Business</a></li>
+            <li class="nav-item"><a asp-controller="Article" asp-action="CategoryIndex" asp-route-category="Entertainment">Entertainment</a></li>
+            <li class="nav-item"><a asp-controller="Article" asp-action="CategoryIndex" asp-route-category="Health">Health</a></li>
+        </ul>
+    </nav>
     <div class="container">
         <partial name="_CookieConsentPartial" />
         <main role="main" class="pb-3">
