--- a/Auth4/Views/Shared/_Layout.cshtml
+++ b/Auth4/Views/Shared/_Layout.cshtml
@@ -19,17 +19,18 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
             <div class="container">
                 <a class="navbar-brand" asp-area="" asp-controller="Article" asp-action="Index">BrightPath</a>
-                <form>@Html.TextBox("searching")<input asp-controller="Article" asp-action="Search" type="submit" value="Search" /></form>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <form class="form-inline mr-auto">
+                        <input class="form-control mr-sm-2" asp-controller="Article" asp-action="Search" type="search" placeholder="Search" aria-label="Search" />
+                        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                    </form>
                     <partial name="_LoginPartial" />
-                    
                 </div>
             </div>
         </nav>
@@ -38,19 +39,23 @@
     <br />
     <br />
     <br />
-    <nav class="navbar navbar-light bg-light">
-        <ul class="navbar-nav">
-            <li class="nav-item"><a asp-controller="Article" asp-action="CategoryIndex" asp-route-category="Business">Business</a></li>
-            <li class="nav-item"><a asp-controller="Article" asp-action="CategoryIndex" asp-route-category="Entertainment">Entertainment</a></li>
-            <li class="nav-item"><a asp-controller="Article" asp-action="CategoryIndex" asp-route-category="Health">Health</a></li>
-        </ul>
-    </nav>
     <div class="container">
+        <ul class="nav">
+            <li class="nav-item">
+                <a class="nav-link" asp-controller="Article" asp-action="CategoryIndex" asp-route-category="Business">Business</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" asp-controller="Article" asp-action="CategoryIndex" asp-route-category="Entertainment">Entertainment</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" asp-controller="Article" asp-action="CategoryIndex" asp-route-category="Health">Health</a>
+            </li>
+        </ul>
         <partial name="_CookieConsentPartial" />
         <main role="main" class="pb-3">
             <br />
             <br />
-            
+
             <br />
             @RenderBody()
         </main>
