--- a/Auth4/Views/Shared/_LoginPartial.cshtml
+++ b/Auth4/Views/Shared/_LoginPartial.cshtml
@@ -2,25 +2,30 @@
 @inject SignInManager<IdentityUser> SignInManager
 @inject UserManager<IdentityUser> UserManager
 
-<ul class="navbar-nav">
-@if (SignInManager.IsSignedIn(User))
-{
-    <li class="nav-item">
-        <a  class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity.Name!</a>
-    </li>
-    <li class="nav-item">
-        <form  class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-            <button  type="submit" class="nav-link btn btn-link text-dark">Logout</button>
-        </form>
-    </li>
-}
-else
-{
-    <li class="nav-item">
-        <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Register">Register</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Login">Login</a>
-    </li>
-}
-</ul>
+
+<div class="nav-item dropdown">
+    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        @if (SignInManager.IsSignedIn(User))
+        {
+            <span>Hello @User.Identity.Name!</span>
+        }
+        else
+        {
+            <span>Login/Register</span>
+        }
+    </a>
+    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+        @if (SignInManager.IsSignedIn(User))
+        {
+            <a class="dropdown-item" asp-area="Identity" asp-page="/Account/Manage/Index">Settings</a>
+            <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
+                <button type="submit" class="dropdown-item">Logout</button>
+            </form>
+        }
+        else
+        {
+            <a class="dropdown-item" asp-area="Identity" asp-page="/Account/Register">Register</a>
+            <a class="dropdown-item" asp-area="Identity" asp-page="/Account/Login">Login</a>
+        }
+    </div>
+</div>
