--- a/Auth4/Views/Article/Index.cshtml
+++ b/Auth4/Views/Article/Index.cshtml
@@ -85,39 +85,30 @@
     -->
 <br />
 
-<div class="flex-wrap">
-
-    <div class"article-wrap style="margin-right:150px;border:1px solid;">
-        @foreach (var item in Model)
+<div class="row">
+    @foreach (var item in Model)
+    {
+        @if (item.Status == ContactStatus.Approved)
         {
-            @if (item.Status == ContactStatus.Approved)
-            {
-                <a asp-action="Details" asp-route-id="@item.ArticleId" style="text-decoration:none;color:inherit;">
-                    <div class="article" style="border-left:20px solid ;margin-top:20px;">
+            <div class="card col-4">
+                @if (item.ImagePath != null)
+                { 
+                <img class="card-img-top" src="~/Image/@item.AuthorId/@item.ArticleId/@Url.Content(item.ImageName)" alt="Article image">
+                 }
 
-                        <div class="title col-10 bg-light" style="padding:1em;text-align:center;border-radius:5px;">
-                            @Html.DisplayFor(modelItem => item.ArticleTitle)
-                        </div>
-                        <div class="short_disc col-lg-10" style="padding:1em;text-align:center;">
-
-                            @Html.DisplayFor(modelItem => item.desc_mini)
-                        </div>
-                        <div class="long_disc col-lg-10" style="padding:1em;min-height:300px;word-wrap: break-word;">
-
-                            @Html.DisplayFor(modelItem => item.desc)
-                        </div>
-                        @if (item.ImagePath != null)
-                        {
-
-                            <img class="img-fluid" src="~/Image/@item.AuthorId/@item.ArticleId/@Url.Content(item.ImageName)" width="250" height="250" />
-                        }
-                    <div>
-                        @item.LikeCount Likes ! |@item.DislikeCount Dislikes !
-
-                    </div>
-                    </div>
+            <div class="card-body">
+                <a asp-action="Details" asp-route-id="@item.ArticleId">
+                    <h5 class="card-title">
+                        @Html.DisplayFor(modelItem => item.ArticleTitle)
+                    </h5>
                 </a>
-            }
+                <p class="card-text">
+                    @Html.DisplayFor(modelItem => item.desc_mini)
+                </p>
+                <div>@item.LikeCount Likes ! |@item.DislikeCount Dislikes !</div>
+                <a asp-action="Details" asp-route-id="@item.ArticleId" class="btn btn-primary">View Article</a>
+            </div>
+            </div>
         }
-    </div>
+    }
 </div>
