page title css class

--- a/Auth4/Views/Article/Create.cshtml
+++ b/Auth4/Views/Article/Create.cshtml
@@ -5,7 +5,7 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create Article</h1>
+<h1 class="page-title">Create Article</h1>
 <hr />
 <div>
     <a asp-action="Index">Back to List</a>
