--- a/Auth4/Views/Article/Create.cshtml
+++ b/Auth4/Views/Article/Create.cshtml
@@ -12,7 +12,7 @@
 </div>
 <hr />
 <div class="row">
-    <div class="col-12">
+    <div class="col-md-5">
         <form asp-action="Post" method="post" class="form-horizontal" role="form" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
