--- a/Auth4/Views/Article/DeleteRequest.cshtml
+++ b/Auth4/Views/Article/DeleteRequest.cshtml
@@ -3,27 +3,21 @@
     ViewData["Title"] = "Delete Request";
 }
 
-<h1>Edit</h1>
+<h1>Edit Article</h1>
 
-<h4>Article</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <dl>
-            <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.ArticleId)
-            </dt>
-            <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.ArticleId)
-            </dd>
-        </dl>
-        <form  method="post" class="form-horizontal" role="form" asp-controller="Review" asp-action="AddToList" asp-route-id="@Model.ArticleId">
+        <div class="article-delete">
+            <span>@Html.DisplayNameFor(model => model.ArticleId): @Html.DisplayFor(model => model.ArticleId)</span>
+        </div>
+        <form method="post" class="form-horizontal" role="form" asp-controller="Review" asp-action="AddToList" asp-route-id="@Model.ArticleId">
             <div class="form-group">
                 <label class="control-label">
                     Reason here nigga
                 </label>
                 @*sending data from view to controller directly (in the parameters)*@
-                <textarea class="form-control" id="reason" name="reason" >
+                <textarea rows="3" class="form-control" id="reason" name="reason">
 
                      @ViewData["reason"]
 
@@ -31,8 +25,9 @@
 
             </div>
 
-            <button type="submit">Submit</button>
-
+            <button class="btn btn-primary" type="submit">Submit</button>
+            <br />
+            <br />
         </form>
     </div>
 </div>
