--- a/Auth4/Views/Article/Details.cshtml
+++ b/Auth4/Views/Article/Details.cshtml
@@ -166,42 +166,34 @@
          <span>x @Model.Article.FlagCount</span>
         </div>
         <!--Comment Section-->
-        <div>
+        <div class="article-comments">
             <h4>Comments</h4>
             <hr />
-            <dl class="row">
+            <div class="comments-list">
                 @foreach (var item in Model.Comments)
                 {
-                    @if (item.ArticleId == Model.Article.ArticleId) { 
-                    <dt class="col-sm-2">
-                        @item.UserName
-                    </dt>
-                    <dd class="col-sm-10">
-                        @item.CommentText
-
-
-                        @if (User.IsInRole("Root") || User.IsInRole("Admin") || User.Identity.Name == item.UserName)
-                        {
-                            <button class="btn btn-link" type="submit" asp-controller="Article" asp-action="DeleteComment" asp-route-commenter="@item.CommentId" asp-route-id="@Model.Article.ArticleId">Delete</button>
-                        }
-                        <button type="submit" style="color:red;" class="btn btn-link" asp-controller="Article" asp-action="FlagComment" asp-route-CId="@item.CommentId" asp-route-AId="@Model.Article.ArticleId">Report</button>
-                        <span>x @item.FlagCount</span>
-                        <hr />
-                    </dd>
+                    @if (item.ArticleId == Model.Article.ArticleId)
+                    {
+                        <div class="media single-comment">
+                            <div class="media-body">
+                                <h5 class="mt-0 mb-1">@item.UserName</h5>
+                                @item.CommentText
+                            </div>
+                            @if (User.IsInRole("Root") || User.IsInRole("Admin") || User.Identity.Name == item.UserName)
+                            {
+                                <button class="btn btn-link" type="submit" asp-controller="Article" asp-action="DeleteComment" asp-route-commenter="@item.CommentId" asp-route-id="@Model.Article.ArticleId">Delete</button>
+                            }
+                            <button type="submit" style="color:red;" class="btn btn-link" asp-controller="Article" asp-action="FlagComment" asp-route-CId="@item.CommentId" asp-route-AId="@Model.Article.ArticleId">Report</button>
+                            <span>x @item.FlagCount</span>
+                        </div>
                     }
                 }
-            </dl>
-            <dl>
-                <dt>
-                    <label class="control-label">Add Your Own Comment !</label> 
-                </dt>
-                <dd>
-                    <textarea style="width:400px;min-height:75px;" type="text" name="CommentText"></textarea>
-                </dd>
-            </dl>
-            <button class="btn btn-primary" type="submit" asp-controller="Article" asp-action="Comment" asp-route-id="@Model.Article.ArticleId">Comment</button>
-
-
+            </div>
+            <div class="form-group post-comment">
+                <label for="comment-input">Post comment</label>
+                <textarea class="form-control" id="comment-input" rows="3" type="text" name="CommentText"></textarea>
+                <button class="btn btn-primary" type="submit" asp-controller="Article" asp-action="Comment" asp-route-id="@Model.Article.ArticleId">Comment</button>
+            </div>
         </div>
     </form>
     <a asp-action="Index">Back to List</a>
