--- a/Auth4/Views/Shared/_Layout.cshtml
+++ b/Auth4/Views/Shared/_Layout.cshtml
@@ -50,7 +50,7 @@
             </li>
         </ul>
         <partial name="_CookieConsentPartial" />
-        <main role="main" class="pb-5 mt-4 content">
+        <main role="main" class="pb-5 mt-4 content-block">
             @RenderBody()
         </main>
     </div>
