--- a/Auth4/Views/Article/Index.cshtml
+++ b/Auth4/Views/Article/Index.cshtml
@@ -11,7 +11,7 @@
         {
             @if (item.Status == ContactStatus.Approved)
             {
-                <div class="col-4">
+                <div class="col-sm-4 mb-5">
                     <div class="card">
                         @if (item.ImagePath != null)
                         {
