--- a/Auth4/Views/Shared/_Layout.cshtml
+++ b/Auth4/Views/Shared/_Layout.cshtml
@@ -19,7 +19,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top shadow-sm">
             <div class="container">
                 <a class="navbar-brand" asp-area="" asp-controller="Article" asp-action="Index">BrightPath</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -28,7 +28,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <form class="form-inline mr-auto">
                         <input class="form-control mr-sm-2" asp-controller="Article" asp-action="Search" type="search" placeholder="Search" aria-label="Search" />
-                        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                        <button class="btn btn-gray my-2 my-sm-0" type="submit">Search</button>
                     </form>
                     <partial name="_LoginPartial" />
                 </div>
