--- a/Auth4/Views/Shared/_Layout.cshtml
+++ b/Auth4/Views/Shared/_Layout.cshtml
@@ -50,6 +50,15 @@
             </li>
         </ul>
         <partial name="_CookieConsentPartial" />
+        <div class="hero" style="background-image: url(/image/hero.png);">
+            <div class="row">
+                <div class="wrapper col-sm-7">
+                    <h1 class="hero-title mb-4">Welcome to The Bright Path</h1>
+                    <p class="hero-description mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum cupiditate fugiat labore. Reiciendis harum, vitae quos, fugit id quod fuga temporibus cumque laborum placeat eligendi voluptatem maiores eveniet recusandae nostrum.</p>
+                    <a class="btn btn-primary" asp-action="create">Create Article</a>
+                </div>
+            </div>
+        </div>
         <main role="main" class="pb-5 mt-4 content-block">
             @RenderBody()
         </main>
