add parralax effect to hero

--- a/Auth4/wwwroot/css/site.css
+++ b/Auth4/wwwroot/css/site.css
@@ -32,6 +32,7 @@ header {
     position: relative;
     height: 430px;
     width: 100%;
+    background: url(/Image/hero.png) 50% 0 no-repeat fixed;
 }
 
 .hero .wrapper {
