--- a/Auth4/Views/Shared/_Layout.cshtml
+++ b/Auth4/Views/Shared/_Layout.cshtml
@@ -50,7 +50,7 @@
             </li>
         </ul>
         <partial name="_CookieConsentPartial" />
-        <div class="hero" style="background-image: url(/image/hero.png);">
+        <div class="hero">
             <div class="row">
                 <div class="wrapper col-sm-7">
                     <h1 class="hero-title mb-4">Welcome to The Bright Path</h1>
@@ -88,6 +88,7 @@
                 integrity="sha256-E/V4cWE4qvAeO5MOhjtGtqDzPndRO1LBk8lJ/PR7CA4=">
         </script>
     </environment>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-parallax/1.1.3/jquery-parallax.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
 
     @RenderSection("Scripts", required: false)
