--- a/Auth4/wwwroot/css/site.css
+++ b/Auth4/wwwroot/css/site.css
@@ -49,7 +49,7 @@ header {
     content: '';
     width: 100%;
     height: 100%;
-    background-color: rgba(#000, .80);
+    background-color: rgba(0, 0, 0, 0.15);
 }
 
 .hero .hero-title {
