--- a/Auth4/Views/Article/TopPicks.cshtml
+++ b/Auth4/Views/Article/TopPicks.cshtml
@@ -3,7 +3,15 @@
 @{
     ViewData["Title"] = "Index";
 }
-
+    <div class="hero">
+        <div class="row">
+            <div class="wrapper col-sm-7">
+                <h1 class="hero-title mb-4">Welcome to The Bright Path</h1>
+                <p class="hero-description mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum cupiditate fugiat labore. Reiciendis harum, vitae quos, fugit id quod fuga temporibus cumque laborum placeat eligendi voluptatem maiores eveniet recusandae nostrum.</p>
+                <a class="btn btn-primary" asp-action="create">Create Article</a>
+            </div>
+        </div>
+    </div>
     <h1 class="wrapper-title mb-4">Top Picks</h1>
     <div class="row">
         <br />
