hero margin bot

--- a/Auth4/Views/Article/TopPicks.cshtml
+++ b/Auth4/Views/Article/TopPicks.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewData["Title"] = "Index";
 }
-    <div class="hero">
+    <div class="hero mb-5">
         <div class="row">
             <div class="wrapper col-sm-7">
                 <h1 class="hero-title mb-4">Welcome to The Bright Path</h1>
