--- a/Auth4/Views/Shared/_Layout.cshtml
+++ b/Auth4/Views/Shared/_Layout.cshtml
@@ -38,7 +38,7 @@
     <br />
     <br />
     <div class="container">
-    <ul class="nav categories-nav mt-4">
+    <ul class="nav categories-nav mt-4 justify-content-center">
         <li class="nav-item">
             <a class="nav-link" asp-controller="Article" asp-action="CategoryIndex" asp-route-category="Business">Business</a>
         </li>
