--- a/Auth4/Views/Shared/_Layout.cshtml
+++ b/Auth4/Views/Shared/_Layout.cshtml
@@ -26,9 +26,9 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <form class="form-inline mr-auto">
-                        <input class="form-control mr-sm-2" asp-controller="Article" asp-action="Search" type="search" placeholder="Search" aria-label="Search" />
-                        <button class="btn btn-gray my-2 my-sm-0" type="submit">Search</button>
+                    <form class="form-inline mr-auto" method="post">
+                        <input class="form-control mr-sm-2"  type="search" placeholder="Search" name="Search" aria-label="Search" />
+                        <button class="btn btn-gray my-2 my-sm-0" asp-controller="Article" asp-action="Search" type="submit">Search</button>
                     </form>
                     <partial name="_LoginPartial" />
                 </div>
