fixed missing container in most of cshtml files

--- a/Auth4/Views/Article/DeleteRequest.cshtml
+++ b/Auth4/Views/Article/DeleteRequest.cshtml
@@ -3,37 +3,39 @@
     ViewData["Title"] = "Delete Request";
 }
 
-<h1>Edit Article</h1>
+<div class="container">
+    <h1>Edit Article</h1>
 
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <div class="article-delete">
-            <span>@Html.DisplayNameFor(model => model.ArticleId): @Html.DisplayFor(model => model.ArticleId)</span>
-        </div>
-        <form method="post" class="form-horizontal" role="form" asp-controller="Review" asp-action="AddToList" asp-route-id="@Model.ArticleId">
-            <div class="form-group">
-                <label class="control-label">
-                    Reason here nigga
-                </label>
-                @*sending data from view to controller directly (in the parameters)*@
-                <textarea rows="3" class="form-control" id="reason" name="reason">
-
-                     @ViewData["reason"]
-
-                </textarea>
-
+    <hr />
+    <div class="row">
+        <div class="col-md-4">
+            <div class="article-delete">
+                <span>@Html.DisplayNameFor(model => model.ArticleId): @Html.DisplayFor(model => model.ArticleId)</span>
             </div>
+            <form method="post" class="form-horizontal" role="form" asp-controller="Review" asp-action="AddToList" asp-route-id="@Model.ArticleId">
+                <div class="form-group">
+                    <label class="control-label">
+                        Reason here nigga
+                    </label>
+                    @*sending data from view to controller directly (in the parameters)*@
+                    <textarea rows="3" class="form-control" id="reason" name="reason">
 
-            <button class="btn btn-primary" type="submit">Submit</button>
-            <br />
-            <br />
-        </form>
+                    @ViewData["reason"]
+
+            </textarea>
+
+                </div>
+
+                <button class="btn btn-primary" type="submit">Submit</button>
+                <br />
+                <br />
+            </form>
+        </div>
     </div>
-</div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
+    <div>
+        <a asp-action="Index">Back to List</a>
+    </div>
 </div>
 
 @section Scripts {
