--- a/Auth4/Views/Article/Index.cshtml
+++ b/Auth4/Views/Article/Index.cshtml
@@ -4,6 +4,7 @@
     ViewData["Title"] = "Index";
 }
 
+<div class="container">
     <h1 class="wrapper-title">Browse</h1>
     <div class="row">
         <br />
@@ -35,3 +36,4 @@
             }
         }
     </div>
+</div>
