--- a/Auth4/Views/Article/RequestDenied.cshtml
+++ b/Auth4/Views/Article/RequestDenied.cshtml
@@ -5,13 +5,15 @@
 
 
 
-<h4>Article</h4>
-<hr />
-<div class="row">
-    <h1 color="red">You already submitted a request for this article please wait approval</h1>
-</div>
+<div class="container">
+    <h4>Article</h4>
+    <hr />
+    <div class="row">
+        <h1 color="red">You already submitted a request for this article please wait approval</h1>
+    </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
+    <div>
+        <a asp-action="Index">Back to List</a>
+    </div>
 </div>
 
