--- a/Auth4/Areas/Identity/Pages/Account/AccessDenied.cshtml
+++ b/Auth4/Areas/Identity/Pages/Account/AccessDenied.cshtml
@@ -4,12 +4,14 @@
     ViewData["Title"] = "Access denied";
 }
 
-<section>
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <h1 class="text-danger">@ViewData["Title"]</h1>
-    <p class="text-danger">You do not have access to this resource.</p>
-</section>
+<div class="container">
+    <section>
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <h1 class="text-danger">@ViewData["Title"]</h1>
+        <p class="text-danger">You do not have access to this resource.</p>
+    </section>
+</div>
