--- a/Auth4/Views/Article/Create.cshtml
+++ b/Auth4/Views/Article/Create.cshtml
@@ -5,67 +5,69 @@
     ViewData["Title"] = "Create";
 }
 
-<h1 class="page-title">Create Article</h1>
-<hr />
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
-<hr />
-<div class="row">
-    <div class="col-md-5">
-        <form asp-action="Post" method="post" class="form-horizontal" role="form" enctype="multipart/form-data">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Article.ArticleTitle" class="control-label"></label>
-                <input placeholder="Enter Title" asp-for="Article.ArticleTitle" class="form-control" />
-                <span asp-validation-for="Article.ArticleTitle" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Article.desc_mini" class="control-label"></label>
-                <input placeholder="Enter Short Description" asp-for="Article.desc_mini" class="form-control" />
-                <span asp-validation-for="Article.desc_mini" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Article.desc" class="control-label"></label>
-                <textarea placeholder="Enter Full Description" type="text" asp-for="Article.desc" rows="3" class="form-control"></textarea>
-                <span asp-validation-for="Article.desc" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Article.ArticleAdress" class="control-label"></label>
-                <input placeholder="Enter Map Address" asp-for="Article.ArticleAdress" class="form-control" />
-                <span asp-validation-for="Article.ArticleAdress" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Article.ArticleLat" class="control-label"></label>
-                <input placeholder="Enter Map Latitude" asp-for="Article.ArticleLat" class="form-control" />
-                <span asp-validation-for="Article.ArticleLat" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Article.ArticleLng" class="control-label"></label>
-                <input placeholder="Enter Map Langitiude" asp-for="Article.ArticleLng" class="form-control" />
-                <span asp-validation-for="Article.ArticleLng" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Article.ArticleContact" class="control-label"></label>
-                <input placeholder="Enter Contact" asp-for="Article.ArticleContact" class="form-control" />
-                <span asp-validation-for="Article.ArticleContact" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <select class="form-control" asp-for="Article.Category" name="Category" id="Category">
-                    <option value="1">Business</option>
-                    <option value="2">Entertainment</option>
-                    <option value="3">Healt</option>
-                </select>
-            </div>
-            <div class="form-group">
-                <label asp-for="Files">The image file</label>
-                <input asp-for="Files" type="file" accept=".jpg,.jpeg,.png" class="form-control-file" required />
-            </div>
+<div class="container">
+    <h1 class="page-title">Create Article</h1>
+    <hr />
+    <div>
+        <a asp-action="Index">Back to List</a>
+    </div>
+    <hr />
+    <div class="row">
+        <div class="col-md-5">
+            <form asp-action="Post" method="post" class="form-horizontal" role="form" enctype="multipart/form-data">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <div class="form-group">
+                    <label asp-for="Article.ArticleTitle" class="control-label"></label>
+                    <input placeholder="Enter Title" asp-for="Article.ArticleTitle" class="form-control" />
+                    <span asp-validation-for="Article.ArticleTitle" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Article.desc_mini" class="control-label"></label>
+                    <input placeholder="Enter Short Description" asp-for="Article.desc_mini" class="form-control" />
+                    <span asp-validation-for="Article.desc_mini" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Article.desc" class="control-label"></label>
+                    <textarea placeholder="Enter Full Description" type="text" asp-for="Article.desc" rows="3" class="form-control"></textarea>
+                    <span asp-validation-for="Article.desc" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Article.ArticleAdress" class="control-label"></label>
+                    <input placeholder="Enter Map Address" asp-for="Article.ArticleAdress" class="form-control" />
+                    <span asp-validation-for="Article.ArticleAdress" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Article.ArticleLat" class="control-label"></label>
+                    <input placeholder="Enter Map Latitude" asp-for="Article.ArticleLat" class="form-control" />
+                    <span asp-validation-for="Article.ArticleLat" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Article.ArticleLng" class="control-label"></label>
+                    <input placeholder="Enter Map Langitiude" asp-for="Article.ArticleLng" class="form-control" />
+                    <span asp-validation-for="Article.ArticleLng" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Article.ArticleContact" class="control-label"></label>
+                    <input placeholder="Enter Contact" asp-for="Article.ArticleContact" class="form-control" />
+                    <span asp-validation-for="Article.ArticleContact" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <select class="form-control" asp-for="Article.Category" name="Category" id="Category">
+                        <option value="1">Business</option>
+                        <option value="2">Entertainment</option>
+                        <option value="3">Healt</option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Files">The image file</label>
+                    <input asp-for="Files" type="file" accept=".jpg,.jpeg,.png" class="form-control-file" required />
+                </div>
 
-            <div class="form-group">
-                <input type="submit" value="Create Article" class="btn btn-primary" />
-            </div>
-        </form>
+                <div class="form-group">
+                    <input type="submit" value="Create Article" class="btn btn-primary" />
+                </div>
+            </form>
+        </div>
     </div>
 </div>
 
