--- a/Auth4/Views/Article/Delete.cshtml
+++ b/Auth4/Views/Article/Delete.cshtml
@@ -4,60 +4,62 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<div class="container">
+    <h1>Delete</h1>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Article</h4>
-    <hr />
-    <dl class="row">
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.ArticleTitle)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.ArticleTitle)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.desc_mini)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.desc_mini)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.desc)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.desc)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.ArticleAdress)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.ArticleAdress)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.ArticleLat)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.ArticleLat)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.ArticleLng)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.ArticleLng)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.ArticleContact)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.ArticleContact)
-        </dd>
-    </dl>
+    <h3>Are you sure you want to delete this?</h3>
+    <div>
+        <h4>Article</h4>
+        <hr />
+        <dl class="row">
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.ArticleTitle)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.ArticleTitle)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.desc_mini)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.desc_mini)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.desc)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.desc)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.ArticleAdress)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.ArticleAdress)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.ArticleLat)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.ArticleLat)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.ArticleLng)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.ArticleLng)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.ArticleContact)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.ArticleContact)
+            </dd>
+        </dl>
 
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="ArticleId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
+        <form asp-action="Delete">
+            <input type="hidden" asp-for="ArticleId" />
+            <input type="submit" value="Delete" class="btn btn-danger" /> |
+            <a asp-action="Index">Back to List</a>
+        </form>
+    </div>
 </div>
