--- a/Auth4/Views/Article/Details.cshtml
+++ b/Auth4/Views/Article/Details.cshtml
@@ -4,197 +4,199 @@
     ViewData["Title"] = "Details";
 }
 
+<div class="container">
     <h1>@Html.DisplayFor(model => model.Article.ArticleTitle)</h1>
 
-<div>
+    <div>
 
-    <hr />
-    <dl class="row">
-        @*<dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Article.ArticleTitle)
-        </dt>*@
-
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Article.desc_mini)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Article.desc_mini)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Article.desc)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Article.desc)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Article.ArticleAdress)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Article.ArticleAdress)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Article.Category)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Article.Category)
-        </dd>
-        @*<dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Article.ArticleLat)
-            @Html.DisplayNameFor(model => model.Article.ArticleLng)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Article.ArticleLat)
-            @Html.DisplayFor(model => model.Article.ArticleLng)
-        </dd>*@
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Article.ArticleContact)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Article.ArticleContact)
-        </dd>
-        @*<dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Article.AuthorName)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Article.AuthorName)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Article.AuthorId)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Article.AuthorId)
-        </dd>*@
-        <dt class="col-sm-12 mb-2">
-            Map:
-        </dt>
-        <dd class="col-sm-6 mb-3">
-            <div id="google-maps" style="height:400px;"></div>
-            <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-            <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA90TINkNOQX2-7jXdPEVrzi1-FjpKh8kA"></script>
-            <script>
-				$(window).on('load', function () {
-					'use strict';
-					var uluru = {
-						// Use online tool latlong.net to lookup latitude/longitude of a place.
-						lat: @Model.Article.ArticleLat, // Latitude
-						lng: @Model.Article.ArticleLng, // Longitude
-					};
-					var map = new google.maps.Map(document.getElementById('google-maps'), {
-						zoom: 15, // Zoom Level
-						center: uluru,
-						scrollwheel: false, // enbale/disable scrollwheel.
-					});
-					var marker = new google.maps.Marker({
-						position: uluru,
-						map: map,
-					});
-				});
-            </script>
-        </dd>
-
-
-        @if (Model.Article.ImageName != null)
-        {
+        <hr />
+        <dl class="row">
             @*<dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.Article.ImagePath)
+                @Html.DisplayNameFor(model => model.Article.ArticleTitle)
+            </dt>*@
+
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.Article.desc_mini)
             </dt>
             <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.Article.ImagePath)
-            </dd>*@
-            <dd class="col-sm-10">
-
-                <img width="500px" src="~/Image/@Model.Article.AuthorId/@Model.Article.ArticleId/@Url.Content(Model.Article.ImageName)" class="img-fluid" />
+                @Html.DisplayFor(model => model.Article.desc_mini)
             </dd>
-        }
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.Article.desc)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.Article.desc)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.Article.ArticleAdress)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.Article.ArticleAdress)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.Article.Category)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.Article.Category)
+            </dd>
+            @*<dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.Article.ArticleLat)
+                @Html.DisplayNameFor(model => model.Article.ArticleLng)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.Article.ArticleLat)
+                @Html.DisplayFor(model => model.Article.ArticleLng)
+            </dd>*@
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.Article.ArticleContact)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.Article.ArticleContact)
+            </dd>
+            @*<dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.Article.AuthorName)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.Article.AuthorName)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.Article.AuthorId)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.Article.AuthorId)
+            </dd>*@
+            <dt class="col-sm-12 mb-2">
+                Map:
+            </dt>
+            <dd class="col-sm-6 mb-3">
+                <div id="google-maps" style="height:400px;"></div>
+                <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+                <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA90TINkNOQX2-7jXdPEVrzi1-FjpKh8kA"></script>
+                <script>
+			$(window).on('load', function () {
+				'use strict';
+				var uluru = {
+					// Use online tool latlong.net to lookup latitude/longitude of a place.
+					lat: @Model.Article.ArticleLat, // Latitude
+					lng: @Model.Article.ArticleLng, // Longitude
+				};
+				var map = new google.maps.Map(document.getElementById('google-maps'), {
+					zoom: 15, // Zoom Level
+					center: uluru,
+					scrollwheel: false, // enbale/disable scrollwheel.
+				});
+				var marker = new google.maps.Marker({
+					position: uluru,
+					map: map,
+				});
+			});
+                </script>
+            </dd>
 
-    </dl>
-    <!--Checking if the current logged in user have liked the post before-->
-    <form method="post" role="form">
-        <div class="vote-block mb-2">
-            @{ bool x = false;
-                foreach (var like in Model.LikeModels)
-                {
-                    if (User.Identity.Name == like.UserName)
-                    {
 
-                        x = true;
-                    }
-                }
-                if (x)
-                {
-                    <button type="submit" class="btn btn-outline-primary" asp-controller="Article" asp-action="UnLike" asp-route-id="@Model.Article.ArticleId">Like</button>
-                }
-                else
-                {
-                    <button type="submit" class="btn btn-primary" asp-controller="Article" asp-action="Like" asp-route-id="@Model.Article.ArticleId">Like</button>
-                }
-            }
-            @{ bool y = false;
-                foreach (var dislike in Model.DislikeModels)
-                {
-                    if (User.Identity.Name == dislike.UserName)
-                    {
-
-                        y = true;
-                    }
-                }
-                if (y)
-                {
-                    <button type="submit" class="btn btn-outline-danger" asp-controller="Article" asp-action="UnDislike" asp-route-id="@Model.Article.ArticleId">Dislike</button>
-                }
-                else
-                {
-                    <button type="submit" class="btn btn-danger" asp-controller="Article" asp-action="Dislike" asp-route-id="@Model.Article.ArticleId">Dislike</button>
-                }
-            }
-        </div>
-        <!--Displaying the amount of likes/dislikes-->
-        <div class="text-muted mb-1">@Html.DisplayFor(model => model.Article.LikeCount) Likes - @Html.DisplayFor(model => model.Article.DislikeCount) Dislikes</div>
-
-        @if (User.Identity.IsAuthenticated && User.Identity.Name == Model.Article.AuthorName)
-        {
-            <a asp-controller="Review" asp-action="ReviewRequest" asp-route-id="@Model.Article.ArticleId">Request Delete</a><br />
-            <a asp-controller="Review" asp-action="EditRequest" asp-route-id="@Model.Article.ArticleId">Request Edit</a>
-        }
-        <div class="mb-4">
-            @if (User.IsInRole("Root") || User.IsInRole("Admin"))
+            @if (Model.Article.ImageName != null)
             {
-                <a asp-action="Edit" asp-route-id="@Model.Article.ArticleId">Edit</a> <br />
-                <a asp-action="Delete" asp-route-id="@Model.Article.ArticleId">Delete</a> <br />
+                @*<dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.Article.ImagePath)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.Article.ImagePath)
+                </dd>*@
+                <dd class="col-sm-10">
+
+                    <img width="500px" src="~/Image/@Model.Article.AuthorId/@Model.Article.ArticleId/@Url.Content(Model.Article.ImageName)" class="img-fluid" />
+                </dd>
             }
-         <button type="submit" style="color:red; padding:0;" class="btn btn-link" asp-controller="Article" asp-action="FlagArticle" asp-route-AId="@Model.Article.ArticleId">Report</button>
-         <span>x @Model.Article.FlagCount</span>
-        </div>
-        <!--Comment Section-->
-        <div class="article-comments">
-            <h4>Comments</h4>
-            <hr />
-            <div class="comments-list">
-                @foreach (var item in Model.Comments)
-                {
-                    @if (item.ArticleId == Model.Article.ArticleId)
+
+        </dl>
+        <!--Checking if the current logged in user have liked the post before-->
+        <form method="post" role="form">
+            <div class="vote-block mb-2">
+                @{ bool x = false;
+                    foreach (var like in Model.LikeModels)
                     {
-                        <div class="media single-comment mb-3">
-                            <div class="media-body">
-                                <h5 class="mt-0 mb-1">@item.UserName</h5>
-                                <span class="text-muted">@item.CommentText</span>
-                            </div>
-                            @if (User.IsInRole("Root") || User.IsInRole("Admin") || User.Identity.Name == item.UserName)
-                            {
-                                <button class="btn btn-link" type="submit" asp-controller="Article" asp-action="DeleteComment" asp-route-commenter="@item.CommentId" asp-route-id="@Model.Article.ArticleId">Delete</button>
-                            }
-                            <button type="submit" style="color:red;" class="btn btn-link" asp-controller="Article" asp-action="FlagComment" asp-route-CId="@item.CommentId" asp-route-AId="@Model.Article.ArticleId">Report</button>
-                            <span>x @item.FlagCount</span>
-                        </div>
+                        if (User.Identity.Name == like.UserName)
+                        {
+
+                            x = true;
+                        }
+                    }
+                    if (x)
+                    {
+                        <button type="submit" class="btn btn-outline-primary" asp-controller="Article" asp-action="UnLike" asp-route-id="@Model.Article.ArticleId">Like</button>
+                    }
+                    else
+                    {
+                        <button type="submit" class="btn btn-primary" asp-controller="Article" asp-action="Like" asp-route-id="@Model.Article.ArticleId">Like</button>
+                    }
+                }
+                @{ bool y = false;
+                    foreach (var dislike in Model.DislikeModels)
+                    {
+                        if (User.Identity.Name == dislike.UserName)
+                        {
+
+                            y = true;
+                        }
+                    }
+                    if (y)
+                    {
+                        <button type="submit" class="btn btn-outline-danger" asp-controller="Article" asp-action="UnDislike" asp-route-id="@Model.Article.ArticleId">Dislike</button>
+                    }
+                    else
+                    {
+                        <button type="submit" class="btn btn-danger" asp-controller="Article" asp-action="Dislike" asp-route-id="@Model.Article.ArticleId">Dislike</button>
                     }
                 }
             </div>
-            <div class="form-group post-comment">
-                <label for="comment-input">Post comment</label>
-                <textarea class="form-control mb-3" id="comment-input" rows="3" type="text" name="CommentText"></textarea>
-                <button class="btn btn-primary" type="submit" asp-controller="Article" asp-action="Comment" asp-route-id="@Model.Article.ArticleId">Comment</button>
+            <!--Displaying the amount of likes/dislikes-->
+            <div class="text-muted mb-1">@Html.DisplayFor(model => model.Article.LikeCount) Likes - @Html.DisplayFor(model => model.Article.DislikeCount) Dislikes</div>
+
+            @if (User.Identity.IsAuthenticated && User.Identity.Name == Model.Article.AuthorName)
+            {
+                <a asp-controller="Review" asp-action="ReviewRequest" asp-route-id="@Model.Article.ArticleId">Request Delete</a><br />
+                <a asp-controller="Review" asp-action="EditRequest" asp-route-id="@Model.Article.ArticleId">Request Edit</a>
+            }
+            <div class="mb-4">
+                @if (User.IsInRole("Root") || User.IsInRole("Admin"))
+                {
+                    <a asp-action="Edit" asp-route-id="@Model.Article.ArticleId">Edit</a> <br />
+                    <a asp-action="Delete" asp-route-id="@Model.Article.ArticleId">Delete</a> <br />
+                }
+                <button type="submit" style="color:red; padding:0;" class="btn btn-link" asp-controller="Article" asp-action="FlagArticle" asp-route-AId="@Model.Article.ArticleId">Report</button>
+                <span>x @Model.Article.FlagCount</span>
             </div>
-        </div>
-    </form>
-    <a asp-action="Index">Back to List</a>
+            <!--Comment Section-->
+            <div class="article-comments">
+                <h4>Comments</h4>
+                <hr />
+                <div class="comments-list">
+                    @foreach (var item in Model.Comments)
+                    {
+                        @if (item.ArticleId == Model.Article.ArticleId)
+                        {
+                            <div class="media single-comment mb-3">
+                                <div class="media-body">
+                                    <h5 class="mt-0 mb-1">@item.UserName</h5>
+                                    <span class="text-muted">@item.CommentText</span>
+                                </div>
+                                @if (User.IsInRole("Root") || User.IsInRole("Admin") || User.Identity.Name == item.UserName)
+                                {
+                                    <button class="btn btn-link" type="submit" asp-controller="Article" asp-action="DeleteComment" asp-route-commenter="@item.CommentId" asp-route-id="@Model.Article.ArticleId">Delete</button>
+                                }
+                                <button type="submit" style="color:red;" class="btn btn-link" asp-controller="Article" asp-action="FlagComment" asp-route-CId="@item.CommentId" asp-route-AId="@Model.Article.ArticleId">Report</button>
+                                <span>x @item.FlagCount</span>
+                            </div>
+                        }
+                    }
+                </div>
+                <div class="form-group post-comment">
+                    <label for="comment-input">Post comment</label>
+                    <textarea class="form-control mb-3" id="comment-input" rows="3" type="text" name="CommentText"></textarea>
+                    <button class="btn btn-primary" type="submit" asp-controller="Article" asp-action="Comment" asp-route-id="@Model.Article.ArticleId">Comment</button>
+                </div>
+            </div>
+        </form>
+        <a asp-action="Index">Back to List</a>
+    </div>
 </div>
