fixed random stuff

--- a/Auth4/Areas/Identity/Pages/Account/Manage/MyArticles.cshtml
+++ b/Auth4/Areas/Identity/Pages/Account/Manage/MyArticles.cshtml
@@ -24,7 +24,7 @@
         </div>
         <div class="short_disc col-lg-10" style="padding:1em;text-align:center;">
 
-            @Html.DisplayFor(modelItem => item.DateOfRequest)
+           Created on: @Html.DisplayFor(modelItem => item.DateOfRequest)
         </div>
 
         <div class="short_disc col-lg-10" style="padding:1em;text-align:center;">
