--- a/Auth4/Views/Article/TopPicks.cshtml
+++ b/Auth4/Views/Article/TopPicks.cshtml
@@ -7,7 +7,7 @@
         <div class="row">
             <div class="wrapper col-sm-7">
                 <h1 class="hero-title mb-4">Welcome to The Bright Path</h1>
-                <p class="hero-description mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum cupiditate fugiat labore. Reiciendis harum, vitae quos, fugit id quod fuga temporibus cumque laborum placeat eligendi voluptatem maiores eveniet recusandae nostrum.</p>
+                <p class="hero-description mb-4">Our mission is simple: to connect people with great local business. This website is a place for everyone to hear about the lates additions in their areas and to remotely check it out. Sign up and create your own now!</p>
                 <a class="btn btn-primary" asp-action="create">Create Article</a>
             </div>
         </div>
