--- a/Auth4/Views/Article/RequestDenied.cshtml
+++ b/Auth4/Views/Article/RequestDenied.cshtml
@@ -1,4 +1,5 @@
-﻿@model BrightPathDev.Models.Article
+﻿@model IEnumerable<BrightPathDev.Models.Article>
+
 @{
     ViewData["Title"] = "Request Denied";
 }
@@ -9,11 +10,9 @@
     <h4>Article</h4>
     <hr />
     <div class="row">
-        <h1 color="red">You already submitted a request for this article please wait approval</h1>
+        <h1 >You already submitted a request for this article please wait for approval</h1>
     </div>
 
-    <div>
-        <a asp-action="Index">Back to List</a>
-    </div>
+    
 </div>
 
